[project]
name = "nanodocs"
version = "0.1.0"
description = "Documentation for the ASRC nanofab facility"
authors = [
    {name = "SPR"}
]
dependencies = [
    "mkdocs-material==9.6.14",
    "mkdocstrings[python]==0.29.1",
    "pymdown-extensions==10.15",
    "ghp-import==2.1.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "ipykernel==6.29.5",
    "pandas>=2.3.0",
]
